--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,8 @@ android {
         applicationId "com.demo.touristguide"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 3S
-        versionName "1.2"
-
+        versionCode 4
+        versionName "1.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
